small updates in set-up